fixed text wrapping issues in column header

--- a/tabulator.less
+++ b/tabulator.less
@@ -48,7 +48,6 @@
 		color: @headerTextColor;
 		font-weight:bold;
 
-		white-space: nowrap;
 		overflow:visible;
 
 		-moz-user-select: none;
